package edu.hitsz.equipment;

import edu.hitsz.aircraft.HeroAircraft;
import edu.hitsz.application.Main;
import edu.hitsz.basic.AbstractFlyingObject;

import java.util.concurrent.Executors;
import java.util.concurrent.ScheduledExecutorService;

public abstract class BaseEquipment extends AbstractFlyingObject {
    public BaseEquipment(int locationX, int locationY, int speedX, int speedY){
        this.locationX=locationX;
        this.locationY=locationY;
        this.speedX=0;
        this.speedY=speedY;
    }
    @Override
    public void forward() {
        super.forward();

        // 判定 x 轴出界
        if (locationX <= 0 || locationX >= Main.WINDOW_WIDTH) {
            vanish();
        }

        // 判定 y 轴出界
        if (speedY > 0 && locationY >= Main.WINDOW_HEIGHT ) {
            // 向下飞行出界
            vanish();
        }else if (locationY <= 0){
            // 向上飞行出界
            vanish();
        }
    }
    public abstract int active(HeroAircraft heroAircraft);
}
